<resources>
    <string name="application_name">Student</string>
    <string name="app_name">Hipla Student</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="choseOption">Choose Option</string>
    <string name="openCamera">Open Camera</string>
    <string name="openGalary">Open Gallary</string>
    <string name="cancel">Cancel</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_section">Section</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="my_routine">My Routine</string>
    <string name="attendence_report">Attendance Report</string>
    <string name="class_start">CLASS_START</string>
    <string name="enter_email_phone">Enter your email or phone</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="ok">OK</string>
    <string name="otp_detail">You will receive an OTP on your phone or email, please enter your OTP here. If you do not receive your OTP,</string>
    <string name="click_here_to_resend">Click Here to Resend</string>
    <string name="routine">Routine</string>
    <string name="report">Report</string>
    <string name="view_report">View Report</string>
    <string name="end_time">End</string>
    <string name="start_time">Start</string>
    <string name="subject">Subject : </string>
    <string name="avg_attendance">Average Attendance</string>
    <string name="selfi">Selfie</string>
    <string name="congratulations">Congratulations!</string>
    <string name="successfuly_attendance">You have successfully marked your Attendance</string>
    <string name="teacher_name">Teacher name :</string>
    <string name="period">Lecture : </string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sorry">Sorry!</string>
    <string name="not_authorized">You are not Authorized</string>
    <string name="send_request_for_manual_attendance">Send request for manual entry</string>
    <string name="send">Send</string>
    <string name="take_image">Capture Image</string>
    <string name="submit">Submit</string>
    <string name="subscription_key">b4edf8e8d7474f1a90f11e3a57a8d57e</string>
    <string name="endpoint">https://southeastasia.api.cognitive.microsoft.com/face/v1.0</string>
    <string name="progress_dialog_title">Verifying your image.</string>
    <string name="dialog_msg">Please wait...</string>
    <string name="face_detected">Face detected successfully.</string>
    <string name="face_not_detected">Face not detected. Please try for manual attendance.</string>
    <string name="be_in_class">Kindly be present in class to register attendance</string>
    <string name="attendance_is_finished">Attendance timing is completed</string>
    <string name="class_going_to_start">Class is starting. Please be present in class before teacher\'s arrival</string>
    <string name="face_not_matched">Face not recognized.</string>
    <string name="enter_your_email_phone">Enter your email or phone number</string>
    <string name="enter_your_otp">Enter the OTP sent to your phone</string>
    <string name="wrong_otp">You have entered a wrong OTP.</string>
    <string name="take_selfi">Take an selfi before giving attendance.</string>
    <string name="try_again">Try Again</string>
    <string name="no_record_available">No routine available for the day</string>
    <string name="semester">Semester : </string>
    <string name="section">Section : </string>
    <string name="stream">Stream : </string>
    <string name="year">Year : </string>
    <string name="phone">Phone :</string>
    <string name="email">Email :</string>
    <string name="permission_not_granted_coarse_location">The ACCESS_COARSE_LOCATION permission is needed to receive bluetooth scan results</string>
    <string name="no_info_available">No information available</string>
    <string name="openHighAccurecyNavigation">Open High Accuracy Map</string>
    <string name="openPowerSavingNavigation">Open Power Saving Map</string>
    <string name="powered_by_cisco_cmx">Indoor Navigation Powered By Cisco CMX</string>
    <string name="logging_in">You have successfully logged in</string>
    <string name="zone_notification">You Are Near The Restricted Zone. Please Do Not Enter In Restricted Zone.</string>
    <string name="wraning">Warning</string>
    <string name="path_finder">Path Finder</string>
    <string name="routine_not_running">This routine is not running correctly.</string>
    <string name="atrate">\@</string>

</resources>
