<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registration"
            type="com.fnspl.hiplaedu_student.activity.RegistrationActivity" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreydeep"
        tools:context="com.fnspl.hiplaedu_student.activity.RegistrationActivity">

        <ScrollView
            android:id="@+id/scl_reg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_profile_pic"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/m10"
                        android:src="@mipmap/ic_launcher_round" />

                    <EditText
                        android:id="@+id/et_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/m20"
                        android:layout_marginRight="@dimen/m20"
                        android:layout_marginTop="@dimen/m10"
                        android:hint="@string/hint_fname"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/m5"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorGreydeep"
                        android:textSize="@dimen/text_medium" />

                    <EditText
                        android:id="@+id/et_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/m20"
                        android:layout_marginRight="@dimen/m20"
                        android:layout_marginTop="@dimen/m10"
                        android:hint="@string/hint_lname"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/m5"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorGreydeep"
                        android:textSize="@dimen/text_medium" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/m20"
                        android:layout_marginRight="@dimen/m20"
                        android:layout_marginTop="@dimen/m10"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/m5"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorGreydeep"
                        android:textSize="@dimen/text_medium" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/m20"
                        android:layout_marginRight="@dimen/m20"
                        android:layout_marginTop="@dimen/m10"
                        android:hint="@string/hint_phone"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/m5"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorGreydeep"
                        android:textSize="@dimen/text_medium" />

                    <EditText
                        android:id="@+id/et_class"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/m20"
                        android:layout_marginRight="@dimen/m20"
                        android:layout_marginTop="@dimen/m10"
                        android:hint="@string/hint_phone"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/m5"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorGreydeep"
                        android:textSize="@dimen/text_medium" />

                    <EditText
                        android:id="@+id/et_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/m20"
                        android:layout_marginRight="@dimen/m20"
                        android:layout_marginTop="@dimen/m10"
                        android:hint="@string/hint_section"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/m5"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorGreydeep"
                        android:textSize="@dimen/text_medium" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/m10"
                        android:text="@string/sign_up"
                        android:textSize="@dimen/text_medium" />

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

    </LinearLayout>

</layout>